--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,3 +20,8 @@ jobs:
         # Source to scope the NuGet API Key to.
         # nuget-api-key-source: # optional
     - run: nuget pack DirectShowNet.nuspec
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.2
+      with:
+        path: DirectShowNet*.nupkg
+        if-no-files-found: error
