--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish nuget packgae
+name: Publish NuGet package
 run-name: ${{ github.actor }} is publishing DirectShow .Net package to NuGet
 on:
   push:
@@ -12,17 +12,28 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
     - name: Setup NuGet.exe for use with actions
-      # You may pin to the exact commit or the version.
-      # uses: NuGet/setup-nuget@fd9fffd6ca4541cf4152a9565835ca1a88a6eb37
       uses: NuGet/setup-nuget@v1.1.1
       with:
-        # NuGet version to install. Can be `latest`, `preview`, a concrete version like `5.3.1`, or a semver range specifier like `5.x`.
-        nuget-version: 'latest' # optional, default is latest
-        # NuGet API Key to configure.
+        nuget-version: 'latest'
         nuget-api-key: ${{ secrets.NUGET_APIKEY }}
-        # Source to scope the NuGet API Key to.
-        # nuget-api-key-source: # optional
-    - run: nuget pack DirectShowNet.nuspec
+
+    - name: Compile nuspec file with run number
+      run: |
+        Write-Host ${{ github.run_number }}
+
+        $NuspecFile = "DirectShowNet.nuspec"
+        $CompiledNuspec = "DirectShowNet.compiled.nuspec"
+        $BuildNumberPattern = "{BUILLD_NUMBER}"
+
+        $content = (Get-Content -Raw $NuspecFile)
+        $content = $content -replace $BuildNumberPattern, ${{ github.run_number }}
+
+        Set-Content -Value $content -Path $CompiledNuspec
+
+        $Result = (Get-Content -Raw $CompiledNuspec)
+        Write-Host $Result
+
+    - run: nuget pack DirectShowNet.compiled.nuspec
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
@@ -32,5 +43,4 @@ jobs:
       run: |
         foreach($file in (Get-ChildItem "$ActivityLogDirectory" -Filter *.nupkg)) {
             nuget push $file -Source https://api.nuget.org/v3/index.json
-            # WRITE-HOST $file
         }
